@@ -422,6 +422,7 @@ BEMENUITEM_DEF_SELECTION(g_beVideoSettingsMenuItem_ForceFullSoftScaling, "Force 
 #ifdef REFKEEN_CONFIG_LAUNCHER_WINDOWTYPE_MENUITEM
 BEMENUITEM_DEF_SELECTION(g_beVideoSettingsMenuItem_LauncherWindowType, "Launcher window type", g_be_videoSettingsChoices_launcherWindowType)
 #endif
+BEMENUITEM_DEF_SELECTION(g_beVideoSettingsMenuItem_ShowEndoom, "Wait for input on exit", g_be_settingsChoices_boolean)
 BEMENUITEM_DEF_STATIC(g_beVideoSettingsMenuItem_ScaleTypeComment,
 "* Border porches aren't separately shown without aspect correction."
 );
@@ -444,6 +445,7 @@ static BEMenuItem *g_beVideoSettingsMenuItems[] = {
 #ifdef REFKEEN_CONFIG_LAUNCHER_WINDOWTYPE_MENUITEM
 	&g_beVideoSettingsMenuItem_LauncherWindowType,
 #endif
+	&g_beVideoSettingsMenuItem_ShowEndoom,
 	&g_beVideoSettingsMenuItem_ScaleTypeComment,
 	&g_beVideoSettingsMenuItem_SoftScalingComment,
 	NULL
